--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-
+SUBDOMAIN=generalMemesMemesBot
+UTU_SECRET=generalMemesMemesBotSecret
+ALEXA_APPID=generalMemesMemesBotId
+FB_ACCESS_TOKEN=generalMemesMemesBotFbAccessToken
+FB_VERIFY_TOKEN=generalMemesMemesBotFbVerifyToken
