--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TWickeryRules/MemesBot"
   }
 }
