--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MzM4NDQ1NDUyODg4NTA2MzY5.DFka1Q.9kyzCh_X2vPJ3P67RsPApr06Kiw
+TOKEN=MzM4NDQ1NDUyODg4NTA2MzY5.DFkczw.JFdkhc3t8B_ZeW0tUrUSOB3YjDk
