--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MzM4NDQ1NDUyODg4NTA2MzY5.DFkczw.JFdkhc3t8B_ZeW0tUrUSOB3YjDk
+TOKEN=MzM4NDQ1NDUyODg4NTA2MzY5.DFk0kQ.U6u5hanRHFPUdvuTCwLcBni2zu8
