--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,3 @@
 {
-    "token": "MzM4NDQ1NDUyODg4NTA2MzY5.DFeiCQ.19Ccsntxn0VF2OhkKy_FnfmdX5s"
+    "token": "MzM4NDQ1NDUyODg4NTA2MzY5.DFk0kQ.U6u5hanRHFPUdvuTCwLcBni2zu8
 }
