--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "memesbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "My First Discord Bot",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "discord.js": "^11.1.0"
   },
